# rest-api-model/src/main/resources/api-docs.yaml
@@ -34,12 +34,12 @@ paths:
         "200":
           description: Successful operation
           content:
-            application/xml:
+            application/json:
               schema:
                 type: array
                 items:
                   $ref: "#/components/schemas/User"
-            application/json:
+            application/xml:
               schema:
                 type: array
                 items:
@@ -62,10 +62,36 @@ paths:
         "200":
           description: Successful operation
           content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
             application/xml:
               schema:
                 $ref: "#/components/schemas/User"
+        "400":
+          description: Invalid id supplied
+        "404":
+          description: User not found
+        "500":
+          $ref: "#/components/responses/error500"
+
+  /users/roles/{id}:
+    get:
+      tags:
+        - User
+      summary: Get User with his Roles from ID
+      description: Get user (with roles) by his ID.
+      operationId: getUserIdWithRoles
+      parameters:
+        - $ref: "#/components/parameters/findById"
+      responses:
+        "200":
+          description: Successful operation
+          content:
             application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+            application/xml:
               schema:
                 $ref: "#/components/schemas/User"
         "400":
@@ -80,17 +106,18 @@ components:
   parameters:
     findById:
       name: id
-      in: query
+      in: path
       description: The ID of object to be returned
       required: true
       schema:
         minimum: 0
-        type: long
+        type: integer
+        format: int64
         default: 0
 
     findByName:
       name: name
-      in: query
+      in: path
       description: The name of object to be returned
       required: true
       schema:
