# rest-api-web/src/main/java/com/api/rest/web/resources/impl/UsersResource.java
@@ -22,6 +22,11 @@ public class UsersResource implements UsersApi {
     }
 
     @Override
+    public ResponseEntity<User> getUserIdWithRoles(Long id) {
+        return new ResponseEntity<>(userService.findByIdWithRoles(id), HttpStatus.OK);
+    }
+
+    @Override
     public ResponseEntity<Page<User>> getUsers(Pageable pageable) {
         return null;
     }
